[gd_scene load_steps=3 format=2]

[ext_resource path="res://DraggablePopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://ToolButtons/EraserSettingPopup.gd" type="Script" id=2]

[node name="EraserSettingPopup" type="Control"]
margin_right = 209.0
margin_bottom = 40.0
rect_min_size = Vector2( 209, 40 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggablePopup" parent="." instance=ExtResource( 1 )]
visible = true
margin_right = 209.0
margin_bottom = 40.0
rect_min_size = Vector2( 209, 40 )

[node name="GridContainer" type="GridContainer" parent="DraggablePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
columns = 3

[node name="SizeLabel" type="Label" parent="DraggablePopup/GridContainer"]
margin_top = 2.0
margin_right = 26.0
margin_bottom = 16.0
text = "Size"

[node name="SizeHSlider" type="HSlider" parent="DraggablePopup/GridContainer"]
margin_left = 30.0
margin_right = 130.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )

[node name="SizeTextEdit" type="TextEdit" parent="DraggablePopup/GridContainer"]
margin_left = 134.0
margin_right = 184.0
margin_bottom = 18.0
rect_min_size = Vector2( 50, 18 )
text = "1"
[connection signal="value_changed" from="DraggablePopup/GridContainer/SizeHSlider" to="." method="_on_SizeHSlider_value_changed"]
[connection signal="text_changed" from="DraggablePopup/GridContainer/SizeTextEdit" to="." method="_on_SizeTextEdit_text_changed"]
